--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
     "@tsconfig/esm": "^1.0.2",
