--- a/package.json
+++ b/package.json
@@ -10,24 +10,17 @@
   },
   "dependencies": {
     "@hymns-of-web/use-easy-google-form": "^1.0.4",
-    "@types/node": "18.15.10",
-    "@types/react": "18.0.30",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.34",
+    "@types/react-dom": "18.2.14",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^13.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
-    "@tsconfig/esm": "^1.0.5",
-    "@tsconfig/strictest": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "eslint": "^8.37.0",
-    "eslint-import-resolver-typescript": "^3.5.4",
-    "eslint-plugin-import": "^2.27.5",
     "sass": "^1.60.0",
     "typescript": "^5.0.2"
   }
