--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@hymns-of-web/use-easy-google-form": "^1.0.4",
+    "@react-three/drei": "^9.92.6",
+    "@react-three/fiber": "^8.15.12",
     "@types/node": "20.8.10",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
     "eslint-config-next": "13.2.4",
     "next": "^13.5",
     "react": "18.2.0",
+    "react-card-flip": "^1.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "react-multi-carousel": "^2.8.4"
+    "react-multi-carousel": "^2.8.4",
+    "react-parallax-tilt": "^1.7.179",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "sass": "^1.60.0",
